# rust-opening-hours

./: .gitignore  Cargo.toml  README.md
examples/: is_open.rs.bk
src/: datespan.rs  lib.rs  opening_hours.rs  opening_hours.rs.bk  opening_hours_test.rs  timespan.rs
src/tests/: mod.rs
tests/: chrono_tz.rs  local.rs  utc.rs
