[package]
name = "opening-hours"
version = "0.0.1"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
description = "Store opening hours of a service or place."
documentation = "https://docs.rs/opening-hours/"
homepage = "https://fin-ger.github.io/rust-opening-hours/"
repository = "https://github.com/fin-ger/rust-opening-hours/"
readme = "README.md"
keywords = ["timespan", "opening", "hours"]
categories = ["date-and-time"]
license = "GPL-3.0"

[dependencies]
timespan = "^0"
chrono = "^0"
serde = { version = "^1", optional = true }

[dev-dependencies]
serde_json = "^1"
serde_derive = "^1"
chrono-tz = "^0"

[features]
default = []

with-serde = ["serde"]

[badges]
travis-ci = { repository = "https://github.com/fin-ger/rust-opening-hours/", branch = "master" }

[package.metadata.docs.rs]
all-features = true

[lib]
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false

[profile.doc]
opt-level = 3
debug = false
debug-assertions = false
